--- a/css/components/index.css
+++ b/css/components/index.css
@@ -4,5 +4,5 @@
 @import url("./card.css");
 @import url("./layout.css");
 @import url("./lists.css");
-@import url("./text.css");
+@import url("./typography.css");
 @import url("./badges.css");
