--- a/css/components/card.css
+++ b/css/components/card.css
@@ -1,4 +1,4 @@
-.card-grid {
+/* .card-grid {
   display: grid;
   gap: 1rem;
 }
@@ -71,6 +71,106 @@
 }
 
 @media screen and (min-width: 64em) {
+  .card-row {
+    grid-template-columns: repeat(3, 1fr);
+  }
+} */
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: hsla(var(--bg-700), 0.8);
+  position: relative;
+}
+
+.card-w-300 {
+  width: 300px;
+}
+
+.card-w-250 {
+  width: 250px;
+}
+
+.card-heading {
+  padding-top: 0.5rem;
+  font-size: 1.8rem;
+}
+
+.card-border {
+  border: 1px solid hsla(var(--font-500), 0.2);
+}
+
+.card-shadow {
+  box-shadow: 0 0.25rem 0.75rem hsla(var(--primary), 0.02);
+}
+
+.card-heading-container {
+  padding: 0.5rem;
+}
+
+.card-text-container {
+  padding: 0 0.5rem 0.5rem;
+  line-height: 1.3;
+}
+
+.product-desctiption-container {
+  padding: 0.5rem;
+}
+
+.h-product-description {
+  align-content: space-evenly;
+}
+
+.product-heading {
+  font-size: 1.8rem;
+  font-weight: 700;
+}
+
+.product-price {
+  display: flex;
+  align-items: baseline;
+  gap: 0.5rem;
+}
+
+.selling-price {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.original-price {
+  text-decoration: line-through;
+  font-size: 0.9rem;
+}
+
+.product-button-container {
+  padding-top: 1rem;
+}
+
+.card-badge {
+  padding: 0.2rem 0.5rem;
+  background-color: hsla(var(--primary-light), 0.25);
+  position: absolute;
+}
+
+.h-card {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.card-row {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+}
+
+@media screen and (min-width: 48em) {
+  .card-row {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 60em) {
   .card-row {
     grid-template-columns: repeat(3, 1fr);
   }
