--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ h5,
 h6 {
   font-family: "Noto Sans", sans-serif;
   margin: 0;
-  padding: 0.8rem 0;
+  padding-top: 2rem;
 }
 
 footer {
@@ -146,8 +146,8 @@ main {
 /* styling for hero section */
 
 .i-container {
-  width: 90vw;
-  max-width: 65rem;
+  width: 95vw;
+  max-width: 70rem;
   margin: 0 auto;
 }
 
@@ -183,8 +183,9 @@ div > h3 {
 }
 
 .component-example {
-  background-color: hsla(0, 0%, 95%, 0.9);
+  background-color: hsla(var(--primary-lighter), 0.45);
   padding: 1rem;
+  border-radius: 0.25rem;
 }
 
 .component-section {
@@ -197,8 +198,7 @@ div > h3 {
 }
 
 .component-description {
-  padding: 1.8rem 0 0;
-  scroll-padding-top: 5rem;
+  padding: 1rem 0;
 }
 
 .code-example {
