--- a/css/components/badges.css
+++ b/css/components/badges.css
@@ -11,8 +11,8 @@
 .badge-counter {
   position: absolute;
   font-size: 0.8rem;
-  min-width: 1.5rem;
-  min-height: 1.5rem;
+  min-width: 1.5em;
+  min-height: 1.5em;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -51,21 +51,20 @@
   border-radius: 50%;
 }
 
-.badge-dot-green {
+.badge-dot {
   border-radius: 50%;
-  background-color: hsl(var(--green-700));
   padding: 0.3125rem;
 }
 
+.badge-dot-green {
+  background-color: hsl(var(--green-700));
+}
+
 .badge-dot-orange {
-  border-radius: 50%;
-  padding: 0.3125rem;
   background-color: hsl(var(--orange-500));
 }
 
 .badge-dot-red {
-  border-radius: 50%;
-  padding: 0.3125rem;
   background-color: hsl(var(--red-700));
 }
 
