--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ div > h3 {
 .component-example {
   background-color: hsla(var(--primary-lighter), 0.45);
   padding: 1rem;
+  margin: 0.5rem 0;
   border-radius: 0.25rem;
 }
 
