--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@200;300;400;500;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500;600;700,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500;600;700&display=swap");
 
 @import url("./components/index.css");
 
@@ -193,11 +193,6 @@ div > h3 {
   display: grid;
   grid-template-columns: 1fr;
 }
-
-.component-list {
-  padding: 0 1rem 0 0;
-}
-
 .component-description {
   padding: 1rem 0;
 }
@@ -230,14 +225,30 @@ pre code.hljs {
 @media screen and (min-width: 48em) {
   .component-section {
     grid-template-columns: 1fr 3fr;
-    gap: 2rem;
+    gap: 1rem;
   }
 
   .component-list {
     position: sticky;
-    top: 3.5rem;
-    height: calc(100vh - 4rem);
+    top: 4.6rem;
+    height: calc(100vh - 11.4rem);
     overflow-y: auto;
     padding-bottom: 2rem;
+  }
+
+  .component-list::-webkit-scrollbar {
+    width: 0.25rem;
+  }
+
+  .component-list::-webkit-scrollbar-track {
+    background: hsl(var(--primary));
+  }
+
+  .component-list::-webkit-scrollbar-thumb {
+    background: hsl(var(--primary-dark));
+  }
+
+  .component-list::-webkit-scrollbar-thumb:hover {
+    background: #555;
   }
 }
