--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,12 @@
   --primary-dark: 209, 80%, 35%;
   --primary: 209, 100%, 55%;
   --primary-light: 209, 100%, 70%;
-  --primary-lighter: 209, 25%, 85%;
-  --secondary-darker: 18, 100%, 20%;
-  --secondary-dark: 18, 80%, 35%;
-  --secondary: 18, 98%, 59%;
-  --secondary-light: 18, 100%, 70%;
-  --secondary-lighter: 18, 25%, 85%;
-  --accent-color: 261, 82%, 61%;
-  --accent-color-value: 261, 82%, 61%;
+  --primary-lighter: 209, 65%, 85%;
+  --accent-darker: 18, 100%, 20%;
+  --accent-dark: 18, 80%, 35%;
+  --accent: 18, 98%, 59%;
+  --accent-light: 18, 100%, 70%;
+  --accent-lighter: 18, 45%, 85%;
   --bg-700: 0, 0%, 98%;
   --bg-600: 0, 0%, 90%;
   --bg-500: 0, 0%, 85%;
@@ -103,7 +101,7 @@ img {
 }
 
 main {
-  padding: 1rem 0;
+  padding-bottom: 1rem;
 }
 
 /* Header styles */
@@ -159,14 +157,14 @@ main {
 
 .hero h1 {
   font-size: 3.6rem;
-  padding: 1rem 0;
+  padding: 0.5rem 0;
 }
 
 .hero h3 {
-  max-width: 45rem;
+  max-width: 60rem;
   margin: 0 auto;
   text-align: center;
-  padding: 1rem 0;
+  padding: 0.5rem 0;
 }
 
 .no-margin {
@@ -235,7 +233,7 @@ pre code.hljs {
     margin-top: 1.5rem;
     top: 6rem;
     scroll-padding-top: 6rem;
-    height: calc(100vh - 11.4rem);
+    height: calc(100vh - 5rem);
     overflow-y: auto;
     padding-bottom: 2rem;
     overflow-x: hidden;
@@ -246,14 +244,14 @@ pre code.hljs {
   }
 
   .component-list::-webkit-scrollbar-track {
-    background: hsla(var(--secondary), 0.2);
+    background: hsla(var(--accent), 0.2);
   }
 
   .component-list::-webkit-scrollbar-thumb {
-    background: hsla(var(--secondary), 0.7);
+    background: hsla(var(--accent), 0.7);
   }
 
   .component-list::-webkit-scrollbar-thumb:hover {
-    background: hsl(var(--secondary-dark));
+    background: hsl(var(--accent-dark));
   }
 }
