feat: created colors page

--- a/css/components/input.css
+++ b/css/components/input.css
@@ -82,7 +82,7 @@
 
 input[type="radio"],
 input[type="checkbox"] {
-  accent-color: hsl(var(--accent-color));
+  accent-color: hsl(var(--accent));
 }
 
 .dropdown-wrapper {
