--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,17 @@
   --font-500: 0, 0%, 28%;
   --font-400: 0, 0%, 42%;
   --font-300: 0, 0%, 56%;
+  /* --font-700: 0, 0%, 98%;
+  --font-600: 0, 0%, 90%;
+  --font-500: 0, 0%, 85%;
+  --font-400: 0, 0%, 80%;
+  --font-300: 0, 0%, 70%;
+  --font-200: 0, 0%, 70%;
+  --bg-700: 0, 0%, 7%;
+  --bg-600: 0, 0%, 14%;
+  --bg-500: 0, 0%, 28%;
+  --bg-400: 0, 0%, 42%;
+  --bg-300: 0, 0%, 56%; */
   --red-700: 0, 100%, 42%;
   --red-500: 0, 100%, 65%;
   --red-300: 0, 100%, 95%;
