--- a/css/components/sidebar.css
+++ b/css/components/sidebar.css
@@ -21,7 +21,7 @@
   display: block;
   cursor: pointer;
   transition: all 0.2s linear;
-  border-radius: 0.25rem;
+  border-radius: 0 0.25rem 0.25rem 0;
 }
 
 .sidebar-item > a {
@@ -29,14 +29,15 @@
 }
 
 .sidebar-item:hover {
-  background-color: hsla(var(--primary), 0.2);
-  transform: scale(1.05);
+  background-color: hsla(var(--primary), 0.05);
+  padding-left: 3px;
   color: hsl(var(--primary));
-  font-weight: 700;
+  transform: none;
 }
 
 .sidebar-item.active {
-  background-color: hsla(var(--primary), 0.2);
+  border-left: 0.25rem solid hsla(var(--primary), 0.9);
+  background-color: hsla(var(--primary), 0.05);
   font-weight: 700;
   color: hsl(var(--primary));
 }
