feat: added two more types of alerts

--- a/css/components/alerts.css
+++ b/css/components/alerts.css
@@ -27,3 +27,27 @@
   background-color: hsl(var(--orange-300));
   color: hsl(var(--orange-700));
 }
+
+.alert-outline-success {
+  color: hsl(var(--green-700));
+  border: 1px solid hsl(var(--green-500));
+  background-color: hsl(var(--bg-700));
+}
+
+.alert-outline-info {
+  color: hsl(var(--blue-700));
+  border: 1px solid hsl(var(--blue-500));
+  background-color: hsl(var(--bg-700));
+}
+
+.alert-outline-error {
+  color: hsl(var(--red-700));
+  border: 1px solid hsl(var(--red-500));
+  background-color: hsl(var(--bg-700));
+}
+
+.alert-outline-warning {
+  color: hsl(var(--orange-700));
+  border: 1px solid hsl(var(--orange-500));
+  background-color: hsl(var(--bg-700));
+}
