--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -19,10 +19,18 @@
   border-radius: 0.5rem;
 }
 
-.btn-link {
-  padding: 0.5rem 0.8rem;
+.link {
+  padding: 0.5rem 0.8rem 0.25rem;
   display: inline-block;
   border-radius: 0.25rem;
+}
+
+.link-primary {
+  border-bottom: 2px solid hsl(var(--primary));
+}
+
+.link-secondary {
+  border-bottom: 2px solid hsl(var(--font-600));
 }
 
 .shadow {
@@ -37,15 +45,13 @@
   border-radius: 50%;
 }
 
-.btn-primary,
-.link-primary {
+.btn-primary {
   color: hsl(var(--bg-700));
   background-color: hsl(var(--primary-dark));
   transition: all 0.3s ease-in-out;
 }
 
-.btn-primary:hover,
-.link-primary:hover {
+.btn-primary:hover {
   background-color: hsl(var(--primary));
 }
 
@@ -58,15 +64,13 @@
   background-color: hsl(var(--accent));
 }
 
-.btn-secondary,
-.link-secondary {
+.btn-secondary {
   background-color: hsl(var(--bg-700));
   transition: all 0.3s ease-in-out;
   border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
-.btn-secondary:hover,
-.link-secondary:hover {
+.btn-secondary:hover {
   background-color: hsla(var(--bg-600), 0.9);
 }
 
