--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -56,7 +56,7 @@
 }
 
 .btn-accent {
-  background-color: hsla(var(--accent), 0.8);
+  background-color: hsla(var(--accent-dark), 1);
   color: #fff;
 }
 
