feat: added cards and loading locally

--- a/css/components/sidebar.css
+++ b/css/components/sidebar.css
@@ -22,6 +22,7 @@
   cursor: pointer;
   transition: all 0.2s linear;
   border-radius: 0 0.25rem 0.25rem 0;
+  color: hsl(var(--font-700));
 }
 
 .sidebar-item > a {
