--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -1,8 +1,11 @@
 .navbar {
-  background-color: hsl(var(--primary));
-  display: block;
+  background-color: hsl(var(--primary-darker));
   padding: 0.5rem;
-  color: #000;
+  color: var(--pure-white);
+}
+
+.navbar-simple {
+  display: block;
 }
 
 .nav-logo {
@@ -10,15 +13,73 @@
   font-weight: 600;
 }
 
-.nav-list {
+.nav-list-simple {
   padding: 0;
   margin: 0;
   display: flex;
   justify-content: flex-end;
-  gap: 2rem;
+  gap: 0.5rem;
 }
 
 .nav-item {
   padding: 0 0.5rem;
   display: inline-block;
+}
+
+.navbar-hamburger {
+  display: flex;
+  align-items: center;
+}
+
+.nav-items {
+  margin-left: auto;
+}
+
+.hamBtn {
+  display: none;
+}
+
+.nav-list-hamburger {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.navexample-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.navbar-demo-body {
+  background-color: hsl(var(--bg-700));
+  min-height: 20vh;
+}
+
+.navbar-hamburger .nav-list {
+  margin-left: auto;
+}
+
+.nav-list-hamburger[data-visible-example="true"] {
+  transform: translateY(60%);
+}
+
+@media (max-width: 35em) {
+  .nav-list-hamburger {
+    flex-direction: column;
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: 5;
+    transform: translateY(-150%);
+    background-color: hsla(var(--primary-darker), 1);
+  }
+
+  .hamBtn {
+    display: block;
+    background: none;
+    border: none;
+    color: inherit;
+    font-size: 1.2rem;
+  }
 }
